--- a/Homework_3Fx.ipynb
+++ b/Homework_3Fx.ipynb
@@ -8,7 +8,7 @@
     "Physics 177, Spring 2017 (Prof. Tanedo)  \n",
     "Due: Tuesday, April 25  \n",
     "\n",
-    "Your Name\n",
+    "Jesus Negrete\n",
     "\n",
     "If there are issues with the homework, please [e-mail Prof. Tanedo](mailto:flip.tanedo@ucr.edu) before the weekend. \n",
     "\n",
